--- a/index.html
+++ b/index.html
@@ -26,11 +26,26 @@
     <main class="main">
       <div class="contenido">
         <h1>Soy <span>Salva</span> Robles</h1>
-         <p>Tengo 20 años. Vivo en Granada, Andalucia.</p>
-         <a download href="#"><button class="download-cv">Download CV</button></a>
+         <p>Bienvenidos a mi Portafolio.</p>
+         <a download href="#"><button class="boton">Download CV</button></a>
       </div>
       <img src="fotos/salva2.png" alt="">
     </main>
 
+    <section class="aboutme">
+      <img src="fotos/salva3.jpeg" alt="">
+      <div id="info" class="about-info">
+        <h2>Sobre mi</h2>
+        <div class="divVacio"></div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores id cumque asperiores fugit, quis repudiandae accusamus quisquam modi numquam laudantium fugiat enim eum pariatur amet illum recusandae debitis reprehenderit sed?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores id cumque asperiores fugit, quis repudiandae accusamus quisquam modi numquam laudantium fugiat enim eum pariatur amet illum recusandae debitis reprehenderit sed?</p>
+        <button class="boton">Read more</button>
+      </div>
+    </section>
+
+
+          </div>
+        </div>
+      </div>      
 </body>
 </html>
