--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main class="main">
       <div class="contenido">
-        <h1>Soy <span>Salva</span> Robles</h1>
+        <h1 class="mainTexto">Soy <span>Salva</span> Robles</h1>
          <p>Bienvenidos a mi Portafolio.</p>
          <a download href="#"><button class="boton">Download CV</button></a>
       </div>
@@ -37,15 +37,13 @@
       <div id="info" class="about-info">
         <h2>Sobre mi</h2>
         <div class="divVacio"></div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores id cumque asperiores fugit, quis repudiandae accusamus quisquam modi numquam laudantium fugiat enim eum pariatur amet illum recusandae debitis reprehenderit sed?</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores id cumque asperiores fugit, quis repudiandae accusamus quisquam modi numquam laudantium fugiat enim eum pariatur amet illum recusandae debitis reprehenderit sed?</p>
-        <button class="boton">Read more</button>
+        <h3>Hola!👋</h3> <br>
+        <p>Soy Salvador Robles aunque prefiero que me llamen Salva. Tengo 20 años, vivo en Granada.</p>
+        <p>Soy un chico proactivo, reponsable y con ganas de aprender. Soy estudiante en el Instituto Politecnico Hemrnegildo Lanz formandome en DAW 👨‍💻.</p>
+        <button class="boton sectionBoton">Read more</button>
       </div>
     </section>
 
-
-          </div>
-        </div>
-      </div>      
+     
 </body>
 </html>
