--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salva Robles</title>
     <link rel="stylesheet" href="estilos.css">
-
 </head>
 <body>
 
@@ -29,7 +28,7 @@
          <p>Bienvenidos a mi Portafolio.</p>
          <a download href="#"><button class="boton">Download CV</button></a>
       </div>
-      <img src="fotos/salva2.png" alt="">
+      <img  src="fotos/salva2.png" alt="">
     </main>
 
     <section class="aboutme">
@@ -44,6 +43,9 @@
       </div>
     </section>
 
-     
+    <aside>
+      <h2>Portafolio</h2>
+    </aside>
+
 </body>
 </html>
