--- a/index.html
+++ b/index.html
@@ -49,16 +49,14 @@
 
     <aside class="portfolio">
       <h2 class="portfolio-heading">Portafolio</h2>
-
       <div class="container">
-
         <div class="card" id="card1">
           <div id="cardImg1">
           </div>
           <div class="card__title">
             <h2>Project Description</h2>
           </div>
-            <a href="#">
+            <a target="_blank" href="https://github.com/Salvarobles/1DAW-LMSGI">
               <i class="fab fa-github"></i>
             </a>
         </div>
@@ -69,25 +67,42 @@
           <div class="card__title">
             <h2>Project Description</h2>
           </div>
-            <a href="#">
+            <a target="_blank" href="https://github.com/Salvarobles/salvarobles.github.io">
               <i class="fab fa-github"></i>
             </a>
         </div>
-
         <div class="card" id="card3">
           <div id="cardImg3">
           </div>
           <div class="card__title">
             <h2>Project Description</h2>
           </div>
-            <a href="#">
+            <a target="_blank" href="https://github.com/Salvarobles/1DAW-Programacion">
               <i class="fab fa-github"></i>
             </a>
         </div>
-
+        <div  id="Port"></div>
       </div>
-      <div id="Port"></div>
     </aside>
+
+    <div class="contact-section">
+        <h2 class="contact-heading">Keep in touch</h2>
+        <div class="divider"></div>
+
+        <div class="contenedor">
+          <img src="fotos/salva5.png" alt="">
+          <div class="contact-form">
+            <h4>Send me a message...</h4>
+            <form class="form-group">
+              <input type="text" placeholder="Name" class="input">
+              <input type="email" placeholder="Email" class="input">
+              <textarea name="message" placeholder="Place your message here..."></textarea>
+              <button type="submit" class="btn-submit">Send message</button>
+            </form>
+          </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
