--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <img  src="fotos/salva2.png" alt="">
     </main>
 
-    <section class="aboutme">
+    <section class="aboutme" id="info">
       <img src="fotos/salva3.jpeg" alt="">
-      <div id="info" class="about-info">
+      <div  class="about-info">
         <h2>Sobre mi</h2>
         <div class="divVacio"></div>
         <h3>Hola!👋</h3> <br>
@@ -47,9 +47,9 @@
       </div>
     </section>
 
-    <aside class="portfolio">
-      <h2 class="portfolio-heading">Portafolio</h2>
-      <div class="container">
+    <aside class="portfolio" id="Port">
+      <h2  class="portfolio-heading">Portafolio</h2>
+      <div  class="container">
         <div class="card" id="card1">
           <div id="cardImg1">
           </div>
@@ -81,28 +81,36 @@
               <i class="fab fa-github"></i>
             </a>
         </div>
-        <div  id="Port"></div>
       </div>
     </aside>
 
-    <div class="contact-section">
-        <h2 class="contact-heading">Keep in touch</h2>
+    <div class="contact" id="Cont">
         <div class="divider"></div>
-
         <div class="contenedor">
           <img src="fotos/salva5.png" alt="">
           <div class="contact-form">
             <h4>Send me a message...</h4>
             <form class="form-group">
-              <input type="text" placeholder="Name" class="input">
+              <input type="text" placeholder="Nombre" class="input">
               <input type="email" placeholder="Email" class="input">
-              <textarea name="message" placeholder="Place your message here..."></textarea>
+              <textarea name="message" placeholder="Escriba su mensaje..."></textarea>
               <button type="submit" class="btn-submit">Send message</button>
             </form>
           </div>
         </div>
     </div>
 
+    <footer class="footer"> 
+      <div class="footer-content">
+        <h2>John Carter</h2>
+        <h5>Frontend Developer</h5>
+      </div>
+      <div class="sotial-networks">
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-twitter-square"></i>
+      </div>
+    </footer>
 
 </body>
 </html>
