--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <footer class="footer"> 
       <div class="footer-content">
-        <h2>John Carter</h2>
+        <h2>Salva Robles</h2>
         <h5>Frontend Developer</h5>
       </div>
       <div class="sotial-networks">
