--- a/index.html
+++ b/index.html
@@ -83,11 +83,9 @@
         </div>
       </div>
     </aside>
-
-    <div class="contact" id="Cont">
-        <div class="divider"></div>
+    <div class="contact" id="Cont"> 
         <div class="contenedor">
-          <img src="fotos/salva5.png" alt="">
+          <img src="fotos/salva10.jpg" alt="">
           <div class="contact-form">
             <h4>Send me a message...</h4>
             <form class="form-group">
@@ -103,7 +101,7 @@
     <footer class="footer"> 
       <div class="footer-content">
         <h2>Salva Robles</h2>
-        <h5>Frontend Developer</h5>
+        <h5>Full Stack</h5>
       </div>
       <div class="sotial-networks">
         <i class="fab fa-instagram"></i>
