--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Salva Robles</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
+    
 </head>
 <body>
 
@@ -50,7 +51,7 @@
     <aside class="portfolio" id="Port">
       <h2  class="portfolio-heading">Portafolio</h2>
       <div  class="container">
-        <div class="card" id="card1">
+        <div class="card quesemueve" id="card1">
           <div id="cardImg1">
           </div>
           <div class="card__title">
@@ -61,7 +62,7 @@
             </a>
         </div>
         
-        <div class="card" id="card2">
+        <div class="card quesemueve" id="card2">
           <div id="cardImg2">
           </div>
           <div class="card__title">
@@ -71,7 +72,7 @@
               <i class="fab fa-github"></i>
             </a>
         </div>
-        <div class="card" id="card3">
+        <div class="card quesemueve" id="card3">
           <div id="cardImg3">
           </div>
           <div class="card__title">
@@ -109,6 +110,7 @@
         <i class="fab fa-twitter-square"></i>
       </div>
     </footer>
-
+<script src="script.js"></script>
 </body>
+
 </html>
