--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salva Robles</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="script.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
     
 </head>
@@ -37,8 +38,8 @@
     </main>
 
     <section class="aboutme" id="info">
-      <img src="fotos/salva3.jpeg" alt="">
-      <div  class="about-info">
+      <img class="box cajaIzq" src="fotos/salva3.jpeg" alt="">
+      <div  class="about-info box cajaDerecha">
         <h2>Sobre mi</h2>
         <div class="divVacio"></div>
         <h3>Hola!👋</h3> <br>
@@ -49,9 +50,9 @@
     </section>
 
     <aside class="portfolio" id="Port">
-      <h2  class="portfolio-heading">Portafolio</h2>
+      <h2  class="portfolio-heading box cajaCentro">Portafolio</h2>
       <div  class="container">
-        <div class="card quesemueve" id="card1">
+        <div class="card box cajaDerecha" id="card1">
           <div id="cardImg1">
           </div>
           <div class="card__title">
@@ -62,7 +63,7 @@
             </a>
         </div>
         
-        <div class="card quesemueve" id="card2">
+        <div class="card box caja" id="card2">
           <div id="cardImg2">
           </div>
           <div class="card__title">
@@ -72,7 +73,7 @@
               <i class="fab fa-github"></i>
             </a>
         </div>
-        <div class="card quesemueve" id="card3">
+        <div class="card box cajaizq" id="card3">
           <div id="cardImg3">
           </div>
           <div class="card__title">
@@ -88,7 +89,7 @@
         <div class="contenedor">
           <img src="fotos/salva10.jpg" alt="">
           <div class="contact-form">
-            <h4>Send me a message...</h4>
+            <h4 class="typed"></h4>
             <form class="form-group">
               <input type="text" placeholder="Nombre" class="input">
               <input type="email" placeholder="Email" class="input">
