--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="contenedor">
           <img src="fotos/salva10.jpg" alt="">
           <div class="contact-form">
-            <h4 class="typed"></h4>
+            <h4 class="typed">Send me a message...<span>&#160;</span></h4>
             <form class="form-group">
               <input type="text" placeholder="Nombre" class="input">
               <input type="email" placeholder="Email" class="input">
