--- a/index.html
+++ b/index.html
@@ -4,29 +4,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salva Robles</title>
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="script.css">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/script.css">
+    <link rel="stylesheet" href="css/intro.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
     
 </head>
+<header class="navegacion">
+  <nav class="navbar">
+      <div class="sigla">
+        <h2>S<span>R</span>G</h2>
+      </div>
+      <ul class="menu">
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#info">Quien Soy</a></li>
+        <li><a href="#Port">Portafolio</a></li> 
+        <li><a href="#Cont">Contacto</a></li>
+      </ul>
+    </nav>
+</header>
+
+
 <body>
+    <div class="bienvenido">
+      <h1 class="fade">Bienvenido a mi Portafolio</h1>
+    </div>
 
     <a class='flotante' href='#' ><img class="imgFlecha" src='fotos/botonFlotante2.jpg' border="0"/></a>
 
-
-    <header class="navegacion">
-        <nav class="navbar">
-            <div class="sigla">
-              <h2>S<span>R</span>G</h2>
-            </div>
-            <ul class="menu">
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#info">Quien Soy</a></li>
-              <li><a href="#Port">Portafolio</a></li> 
-              <li><a href="#Cont">Contacto</a></li>
-            </ul>
-          </nav>
-    </header>
 
     <main class="main" id="#">
       <div class="contenido">
@@ -100,18 +105,19 @@
         </div>
     </div>
 
-    <footer class="footer"> 
-      <div class="footer-content">
-        <h2>Salva Robles</h2>
-        <h5>Full Stack</h5>
-      </div>
-      <div class="sotial-networks">
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-linkedin"></i>
-        <i class="fab fa-twitter-square"></i>
-      </div>
-    </footer>
 <script src="script.js"></script>
 </body>
+
+<footer class="footer"> 
+  <div class="footer-content">
+    <h2>Salva Robles</h2>
+    <h5>Full Stack</h5>
+  </div>
+  <div class="sotial-networks">
+    <i class="fab fa-instagram"></i>
+    <i class="fab fa-linkedin"></i>
+    <i class="fab fa-twitter-square"></i>
+  </div>
+</footer>
 
 </html>
