--- a/index.html
+++ b/index.html
@@ -24,20 +24,24 @@
     </nav>
 </header>
 
+<div class="bienvenido">
+  <p class="fade box cajaIzq emogy1">😎</p>
+  <p class="fade">Bienvenido a mi Portafolio </p>
+  <p class="fade">Soy Salvador Robles Gómez</p>
+  <p class="fade box cajaDerecha emogy2">👨‍💻</p>
+</div> 
 
 <body>
-    <div class="bienvenido">
-      <h1 class="fade">Bienvenido a mi Portafolio</h1>
-    </div>
-
-    <a class='flotante' href='#' ><img class="imgFlecha" src='fotos/botonFlotante2.jpg' border="0"/></a>
+  
+    <a class='flotante' href='#' ><img class="imgFlecha flecha1" src='fotos/botonFlotante2.jpg' ></a>
+    <!-- <a class='flotante2' href='#Cont' ><img class="imgFlecha felcha1" src='fotos/botonInvertido.jpg' ></a> -->
 
 
     <main class="main" id="#">
       <div class="contenido">
         <h1 class="mainTexto">Soy <span>Salva</span> Robles</h1>
-         <p>Bienvenidos a mi Portafolio.</p>
-         <a download href="#"><button class="boton">Download CV</button></a>
+        <p>Bienvenidos a mi Portafolio.</p>
+        <a download href="#"><button class="boton">Download CV</button></a>
       </div>
       <img  src="fotos/salva2.png" alt="">
     </main>
