--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/script.css">
     <link rel="stylesheet" href="css/intro.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
+    <link rel="stylesheet" href="css/movil.css">
     
 </head>
 
@@ -35,10 +36,9 @@
 
 <body>
 
-
   <div class='flotante'>
-    <a class='flotante invisible' href='#' ><img class="imgFlecha flecha1" src='fotos/botonFlotante2.jpg' ></a>
-    <a class='flotante' href='#' ><img class="imgFlecha flecha1" src='fotos/botonFlotante2.jpg' ></a>
+    <a class='' href='#' ><img class="imgFlecha flecha1" src='fotos/botonFlotante2.jpg' ></a>
+     <!-- <a class='flotante' href='#' ><img class="imgFlecha flecha1" src='fotos/botonInvertido.jpg' ></a>  -->
   </div>  
   <!-- <a class='flotante' href='#' ><img class="imgFlecha flecha1" src='fotos/botonFlotante2.jpg' ></a> -->
     <!-- <a class='flotante2' href='#Cont' ><img class="imgFlecha felcha1" src='fotos/botonInvertido.jpg' ></a> -->
