--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/intro.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
     <link rel="stylesheet" href="css/movil.css">
+    <link rel="shortcut icon" href="fotos/salva.ico" type="image/x-icon">
     
 </head>
 
