--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
   <p class="fade box cajaDerecha emogy2">👨‍💻</p>
 </div> 
 
-<header class="navegacion">
+<div class="control-menu">
+  <a href="#navigation" class="open"><span>ABRIR MENÚ</span></a>
+  <a href="#" class="open"><span>CERRAR MENÚ</span></a>
+</div>
+
+<header class="navegacion" id="navigation">
   <nav class="navbar">
       <div class="sigla">
         <h2>S<span>R</span>G</h2>
