--- a/index.html
+++ b/index.html
@@ -10,27 +10,52 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
     <link rel="stylesheet" href="css/movil.css">
     <link rel="shortcut icon" href="fotos/salva.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/c250495bcb.js" crossorigin="anonymous"></script>
     
 </head>
 
 
-<div class="bienvenido">
+<!-- <div class="bienvenido">
   <p class="fade box cajaIzq emogy1">😎</p>
   <p class="fade">Bienvenido a mi Portafolio </p>
   <p class="fade">Soy Salvador Robles Gómez</p>
   <p class="fade box cajaDerecha emogy2">👨‍💻</p>
-</div> 
+</div>  -->
 
-<div class="control-menu">
-  <a href="#navigation" class="open"><span>ABRIR MENÚ</span></a>
-  <a href="#" class="open"><span>CERRAR MENÚ</span></a>
-</div>
+<!-- <nav class="nav"> -->
+  <!-- <a href="#">
+      <img class="logo" src="img/logo.png" alt="logo">
+  </a>
 
-<header class="navegacion" id="navigation">
+  <button class="nav-toggle">
+      <i class="fa-sharp fa-solid fa-bars fa-xl"></i>
+  </button>
+
+  <ul class="navbar">
+      <li>
+          <a href="#">Sobre mi</a>
+       </li>
+      <li>
+          <a href="#">Proyectos</a>
+      </li>
+      <li>
+          <a href="#">Contacto</a>
+       </li>
+  </ul>
+</nav> -->
+
+<header class="navegacion">
+  
   <nav class="navbar">
+
       <div class="sigla">
         <h2>S<span>R</span>G</h2>
       </div>
+
+      <button class="nav-toggle">
+        <i class="fa-sharp fa-solid fa-bars fa-xl"></i>
+      </button>
+      
       <ul class="menu">
         <li><a href="#">Inicio</a></li>
         <li><a href="#info">Quien Soy</a></li>
@@ -38,6 +63,7 @@
         <li><a href="#Cont">Contacto</a></li>
       </ul>
     </nav>
+
 </header>
 
 <body>
